--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     </div>
                     <div class="product-info">
                         <h3>Aromo Starter Kit</h3>
-                        <p>Paket lengkap untuk memulai perjalanan bebas rokok Anda. Termasuk perangkat Aromo dan 3 varian aroma pilihan.</p>
-                        <div class="product-price">Rp 150.000</div>
+                        <p>Paket lengkap untuk memulai perjalanan bebas rokok Anda. Termasuk perangkat Aromo dan 3 varian aroma acak.</p>
+                        <div class="product-price">Rp 75.000</div>
                         <a href="#order" class="btn-primary" style="width: 100%; justify-content: center;">Pesan Sekarang</a>
                     </div>
                 </div>
